Adding listing exchanges API endpoint
